@startuml
'https://plantuml.com/class-diagram

class Cell{
- Set<Particle> particles
}


class Particle{
- Double x
- Double y
- Double radius
- Set<Particle> neighbours
- Double angle
- Double speed
+ void moveParticle(Double L)
+ void updateAngle(Double n)

}

class CellIndexMethod{
- Double L
- Integer N
- Double interactionRadius
# Integer M
- Set<Particle> particles
# Cell[][] cells
}

class CellIndexMethodPeriodic

CellIndexMethod <|-- CellIndexMethodPeriodic
CellIndexMethod *-- Particle
CellIndexMethod *-- Cell
Cell *-- Particle



@enduml